@@ -1540,11 +1540,6 @@ parameter_list|)
 throws|throws
 name|IOException
 block|{
-name|IOException
-name|exc
-init|=
-literal|null
-decl_stmt|;
 comment|// If the file is a directory we have to open read-only, for regular files we must open r/w for the fsync to have an effect.
 comment|// See http://blog.httrack.com/blog/2013/11/15/everything-you-always-wanted-to-know-about-fsync/
 try|try
@@ -1571,23 +1566,6 @@ name|WRITE
 argument_list|)
 init|)
 block|{
-for|for
-control|(
-name|int
-name|retry
-init|=
-literal|0
-init|;
-name|retry
-operator|<
-literal|5
-condition|;
-name|retry
-operator|++
-control|)
-block|{
-try|try
-block|{
 name|file
 operator|.
 name|force
@@ -1595,7 +1573,6 @@ argument_list|(
 literal|true
 argument_list|)
 expr_stmt|;
-return|return;
 block|}
 catch|catch
 parameter_list|(
@@ -1603,77 +1580,6 @@ name|IOException
 name|ioe
 parameter_list|)
 block|{
-if|if
-condition|(
-name|exc
-operator|==
-literal|null
-condition|)
-block|{
-name|exc
-operator|=
-name|ioe
-expr_stmt|;
-block|}
-try|try
-block|{
-comment|// Pause 5 msec
-name|Thread
-operator|.
-name|sleep
-argument_list|(
-literal|5L
-argument_list|)
-expr_stmt|;
-block|}
-catch|catch
-parameter_list|(
-name|InterruptedException
-name|ie
-parameter_list|)
-block|{
-name|ThreadInterruptedException
-name|ex
-init|=
-operator|new
-name|ThreadInterruptedException
-argument_list|(
-name|ie
-argument_list|)
-decl_stmt|;
-name|ex
-operator|.
-name|addSuppressed
-argument_list|(
-name|exc
-argument_list|)
-expr_stmt|;
-throw|throw
-name|ex
-throw|;
-block|}
-block|}
-block|}
-block|}
-catch|catch
-parameter_list|(
-name|IOException
-name|ioe
-parameter_list|)
-block|{
-if|if
-condition|(
-name|exc
-operator|==
-literal|null
-condition|)
-block|{
-name|exc
-operator|=
-name|ioe
-expr_stmt|;
-block|}
-block|}
 if|if
 condition|(
 name|isDir
@@ -1701,15 +1607,16 @@ literal|"On Linux and MacOSX fsyncing a directory should not throw IOException, 
 operator|+
 literal|"we just don't want to rely on that in production (undocumented). Got: "
 operator|+
-name|exc
+name|ioe
 assert|;
 comment|// Ignore exception if it is a directory
 return|return;
 block|}
 comment|// Throw original exception
 throw|throw
-name|exc
+name|ioe
 throw|;
+block|}
 block|}
 comment|/** If the dir is an {@link FSDirectory} or wraps one via possibly    *  nested {@link FilterDirectory} or {@link FileSwitchDirectory},    *  this returns {@link #spins(Path)} for the wrapped directory,    *  else, true.    *    *  @throws IOException if {@code path} does not exist.    *    *  @lucene.internal */
 DECL|method|spins
