@@ -3103,6 +3103,152 @@ argument_list|)
 argument_list|)
 expr_stmt|;
 block|}
+DECL|method|testFsyncDirectory
+specifier|public
+name|void
+name|testFsyncDirectory
+parameter_list|()
+throws|throws
+name|Exception
+block|{
+name|Path
+name|dir
+init|=
+name|createTempDir
+argument_list|()
+decl_stmt|;
+name|dir
+operator|=
+name|FilterPath
+operator|.
+name|unwrap
+argument_list|(
+name|dir
+argument_list|)
+operator|.
+name|toRealPath
+argument_list|()
+expr_stmt|;
+name|Path
+name|devdir
+init|=
+name|dir
+operator|.
+name|resolve
+argument_list|(
+literal|"dev"
+argument_list|)
+decl_stmt|;
+name|Files
+operator|.
+name|createDirectories
+argument_list|(
+name|devdir
+argument_list|)
+expr_stmt|;
+name|IOUtils
+operator|.
+name|fsync
+argument_list|(
+name|devdir
+argument_list|,
+literal|true
+argument_list|)
+expr_stmt|;
+comment|// no exception
+block|}
+DECL|method|testFsyncFile
+specifier|public
+name|void
+name|testFsyncFile
+parameter_list|()
+throws|throws
+name|Exception
+block|{
+name|Path
+name|dir
+init|=
+name|createTempDir
+argument_list|()
+decl_stmt|;
+name|dir
+operator|=
+name|FilterPath
+operator|.
+name|unwrap
+argument_list|(
+name|dir
+argument_list|)
+operator|.
+name|toRealPath
+argument_list|()
+expr_stmt|;
+name|Path
+name|devdir
+init|=
+name|dir
+operator|.
+name|resolve
+argument_list|(
+literal|"dev"
+argument_list|)
+decl_stmt|;
+name|Files
+operator|.
+name|createDirectories
+argument_list|(
+name|devdir
+argument_list|)
+expr_stmt|;
+name|Path
+name|somefile
+init|=
+name|devdir
+operator|.
+name|resolve
+argument_list|(
+literal|"somefile"
+argument_list|)
+decl_stmt|;
+try|try
+init|(
+name|OutputStream
+name|o
+init|=
+name|Files
+operator|.
+name|newOutputStream
+argument_list|(
+name|somefile
+argument_list|)
+init|)
+block|{
+name|o
+operator|.
+name|write
+argument_list|(
+literal|"0\n"
+operator|.
+name|getBytes
+argument_list|(
+name|StandardCharsets
+operator|.
+name|US_ASCII
+argument_list|)
+argument_list|)
+expr_stmt|;
+block|}
+name|IOUtils
+operator|.
+name|fsync
+argument_list|(
+name|somefile
+argument_list|,
+literal|false
+argument_list|)
+expr_stmt|;
+comment|// no exception
+block|}
 block|}
 end_class
 end_unit
